crates/parser/tests/snapshots/block_string_gen_folded_i2_clip_trailing_empty_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-gen-folded-i2-clip-trailing-empty-dedent

## Input

```
key >2
  a


end marker

```

## CST

```
SOURCE_FILE@0..24
  ENTRY@0..13
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..13
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        NUMERAL@5..6 "2"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..10
        STRING@9..10 "a"
      NEWLINE@10..11 "\n"
      LINE_STRING@11..11
      NEWLINE@11..12 "\n"
      LINE_STRING@12..12
      NEWLINE@12..13 "\n"
  ENTRY@13..24
    WORD_KEY@13..16
      WORD@13..16 "end"
    SPACE@16..17 " "
    LINE_STRING@17..23
      STRING@17..23 "marker"
    NEWLINE@23..24 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    indent: NUMERAL@5..6 "2",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@9..10 "a",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@13..16 "end",
            },
            value: LineString {
                string: STRING@17..23 "marker",
            },
        },
    ],
}
```

vim:ft=markdown
